# alphacamper

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  TESTING.md  TODOS.md
alphacamper-api/: .dockerignore  .env.example  CAMPFLARE_REFERENCE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alphacamper-api/alembic/: env.py
alphacamper-api/alembic/versions/: 20260416_000001_create_core_tables.py  20260417_000002_add_notification_deliveries.py  20260417_000003_add_catalog_refresh_jobs.py
alphacamper-api/app/: __init__.py  main.py
alphacamper-api/app/alerts/: __init__.py  engine.py  tasks.py
alphacamper-api/app/api/: router.py
alphacamper-api/app/core/: __init__.py  config.py  database.py
alphacamper-api/app/ingestion/: __init__.py
alphacamper-api/app/models/: enums.py  (+2 more)
alphacamper-api/examples/: goingtocamp-seed.example.json
alphacamper-api/scripts/: camis_availability_session.cjs  camis_browser_fetch.cjs  process_catalog_refresh_jobs.py  promote_local_catalog_to_production.py  run_bc_parks_demo.py  run_boundary_enrichment.py  run_goingtocamp_seed_sync.py  run_ontario_parks_demo.py  run_open_data_enrichment.py  run_parks_canada_demo.py  run_production_catalog_sync.py  run_recgov_demo.py  seed_recgov_demo.py  session_bootstrap.cjs
alphacamper-api/tests/: test_admin_quality_summary.py  test_alert_engine.py  test_browser_camis_client.py  test_catalog_refresh_jobs.py  test_directory_sync_state.py  test_goingtocamp_client.py  test_goingtocamp_live_support.py  test_health_route.py  test_open_data_enrichment.py  test_provider_quality.py
(+347 files in other folders)
